--- a/cmp-databinding-start/cmp-databinding-start/src/app/cockpit/cockpit.component.html
+++ b/cmp-databinding-start/cmp-databinding-start/src/app/cockpit/cockpit.component.html
@@ -2,15 +2,22 @@
   <div class="col-xs-12">
     <p>Add new Servers or blueprints!</p>
     <label>Server Name</label>
-    <input type="text" class="form-control" [(ngModel)]="newServerName">
+    <!-- <input type="text" class="form-control" [(ngModel)]="newServerName"> -->
+    <input 
+        type="text"
+        class="form-control"
+        #serverNameInput> <!-- //local reference variable -->
     <label>Server Content</label>
-    <input type="text" class="form-control" [(ngModel)]="newServerContent">
+    <!-- <input type="text" class="form-control" [(ngModel)]="newServerContent"> -->
+    <input type="text" 
+        class="form-control"
+        #contentInput >
     <br>
     <button
       class="btn btn-primary"
-      (click)="onAddServer()">Add Server</button>
+      (click)="onAddServer(serverNameInput)">Add Server</button>
     <button
       class="btn btn-primary"
-      (click)="onAddBlueprint()">Add Server Blueprint</button>
+      (click)="onAddBlueprint(serverNameInput)">Add Server Blueprint</button>
   </div>
 </div>
