--- a/shopping-list/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/shopping-list/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -1,18 +1,21 @@
 <div class="row">
   <div class="col-xs-12">
-    <img src="" alt="" class="img-responsive">
+    <img [src]="recipe.imagePath" alt="{{ recipe.imagePath }}" class="img-responsive"
+    style="max-height: 290px;">
   </div>
 </div>
 
 <div class="row">
   <div class="col-xs-12">
-    <h1>Recipe Name</h1>
+    <h1>{{ recipe.name }}</h1>
   </div>
 </div>
 
 <div class="row">
   <div class="col-xs-12">
-    <div class="btn-group">
+    <div class="btn-group"
+    appDropdown
+    >
       <button 
           type="button"
           class="btn btn-primary dropdown-toggle">
@@ -29,11 +32,13 @@
 
 <div class="row">
   <div class="col-xs-12">
-    Description
+    <!-- Description -->
+    {{ recipe.description }}
   </div>
 </div>
 <div class="row">
   <div class="col-xs-12">
     Ingredient
+    <!-- <p #ingredient></p> -->
   </div>
 </div>
