--- a/shopping-list/src/app/recipes/recipe-list/recipes-item/recipes-item.component.html
+++ b/shopping-list/src/app/recipes/recipe-list/recipes-item/recipes-item.component.html
@@ -1,3 +1,15 @@
-<p>
-  recipes-item works!
-</p>
+<a href="#" 
+  class="list-group-item clearfix"
+  (click)="onSelectedRecipe()"
+  >
+  <div class="pull-left">
+      <h4 class="list-group-item-heading">{{ recipe.name }}</h4>
+      <p class="list-group-item-text">{{ recipe.description }}</p>
+  </div>
+  <span class="pull-right">
+      <!-- src="{{ recipe.imagePath }}" either use this or property binding-->
+      <img                 
+      [src]="recipe.imagePath"
+      alt="" class="img-responsive" style="max-height: 50px" />
+  </span>
+</a>
