--- a/shopping-list/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/shopping-list/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -22,7 +22,7 @@
         Manage Recipe <span class="caret"></span>
         </button>
         <ul class="dropdown-menu">
-          <li><a href="#">To Shopping List</a></li>
+          <li><a (click)="onAddToShopList()" style="cursor: pointer;">To Shopping List</a></li>
           <li><a href="#">Edit Recipe</a></li>
           <li><a href="#">Delete Recipe</a></li>
         </ul>
@@ -38,7 +38,11 @@
 </div>
 <div class="row">
   <div class="col-xs-12">
-    Ingredient
-    <!-- <p #ingredient></p> -->
+      <ul class="list-group">
+        <li class="list-group-item"
+        *ngFor="let ingredient of recipe.ingredients">
+          {{ ingredient.name }} : {{ ingredient.amount }}
+        </li>
+      </ul>
   </div>
 </div>
