--- a/shopping-list/src/app/app.component.html
+++ b/shopping-list/src/app/app.component.html
@@ -1,9 +1,10 @@
-<app-header (featureSelected)="onNavigate($event)"></app-header>
+<app-header></app-header>
 <div class="container">
   <div class="row">
-    <div class="col-md-12">      
-      <app-recipes *ngIf="loadedFeature === 'recipe'"></app-recipes>
-      <app-shopping-list *ngIf="loadedFeature !== 'recipe'"></app-shopping-list>
+    <div class="col-md-12"> 
+      <router-outlet></router-outlet>
+      <!-- <app-recipes *ngIf="loadedFeature === 'recipe'"></app-recipes>
+      <app-shopping-list *ngIf="loadedFeature !== 'recipe'"></app-shopping-list> -->
     </div>
   </div>
 </div>
