--- a/shopping-list/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/shopping-list/src/app/recipes/recipe-list/recipe-list.component.html
@@ -1,17 +1,16 @@
 <div class="row">
     <div class="col-xs-12">
-        <button class="btn btn-success">New Recipe</button>
+        <button class="btn btn-success" (click)="onNewRecipe()">New Recipe</button>
     </div>
 </div>
 <hr>
 
-<div class="row">    
-    <div class="col-xs-12">        
+<div class="row">
+    <div class="col-xs-12">
         <app-recipes-item 
-        *ngFor="let recipeEl of recipes"
-        [recipe]="recipeEl"        
-        >
-    </app-recipes-item>
+        *ngFor="let recipeEl of recipes; let i = index" 
+        [recipe]="recipeEl"
+        [index]="i">
+        </app-recipes-item>
     </div>
 </div>
-
