--- a/shopping-list/src/app/recipes/recipe-list/recipes-item/recipes-item.component.html
+++ b/shopping-list/src/app/recipes/recipe-list/recipes-item/recipes-item.component.html
@@ -1,6 +1,8 @@
-<a href="#" 
-  class="list-group-item clearfix"
-  (click)="onSelectedRecipe()"
+<a
+  style="cursor: pointer;"
+  class="list-group-item clearfix"  
+  [routerLink]="[index]"
+  routerLinkActive="active"
   >
   <div class="pull-left">
       <h4 class="list-group-item-heading">{{ recipe.name }}</h4>
