--- a/shopping-list/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/shopping-list/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -1,14 +1,16 @@
 <div class="row">
   <div class="col-xs-12">
-    <form>
+    <form (ngSubmit)="onSaveItem(f)" #f="ngForm">
       <div class="row">
         <div class="col-sm-5 form-group">
           <label for="name">Name</label>
           <input 
             type="text"
             id="name"
-            class="form-control"            
-            #nameInput
+            class="form-control"
+            name="name"
+            ngModel
+            required
             >
         </div>
         <div class="col-sm-2 form-group">
@@ -16,16 +18,23 @@
           <input 
             type="text" 
             id="amount" 
-            class="form-control"
-            #amountInput
+            class="form-control"            
+            name="amount"
+            ngModel
+            required
+            pattern="^[1-9]+[0-9]*$"
             >
         </div>
       </div>
       <div class="row">
         <div class="col-xs-12">
-          <button class="btn btn-success" type="submit" (click) = "onAddIngredient()" >Add</button>
-          <button class="btn btn-danger" type="button">Delete</button>
-          <button class="btn btn-primary" type="button">Clear</button>
+          <button class="btn btn-success" type="submit" [disabled]="!f.valid">{{ editMode ? 'Update' : 'Add'}}</button>
+          <button 
+            class="btn btn-danger" type="button" 
+            (click)="onDeleteItem()"
+            *ngIf="editMode"
+          >Delete</button>
+          <button class="btn btn-primary" type="button" (click)="onClear()">Clear</button>
         </div>
       </div>
     </form>
