--- a/pipes-start/src/app/app.component.html
+++ b/pipes-start/src/app/app.component.html
@@ -4,7 +4,9 @@
       <input type="text" [(ngModel)]="filteredStatus">
       <br>
       <button class="btn btn-primary" (click)="onAddServer()">Add Server</button>
-      <hr>
+      <br><br>
+      <h2>App Server Status {{ appStatus | async }}</h2>
+      <hr>      
       <ul class="list-group">
         <li
           class="list-group-item"
